--- a/src/assets/sass/variables.sass
+++ b/src/assets/sass/variables.sass
@@ -1,4 +1,5 @@
 //Break Points
+$bp-xs: 399px
 $bp-sm: 576px
 $bp-md: 768px
 $bp-lg: 992px
